@@ -77,68 +77,9 @@ namespace xmpp.common
 			return OuterXml;
 		}
 		
-		/// <summary>
+		/// <value>
 		/// 
-		/// </summary>
-		/// <param name="one">
-		/// A <see cref="Tag"/>
-		/// </param>
-		/// <param name="two">
-		/// A <see cref="System.String"/>
-		/// </param>
-		/// <returns>
-		/// A <see cref="System.Boolean"/>
-		/// </returns>
-		public static bool operator ==(Tag one, string two)
-		{
-			return one.LocalName == two;
-		}
-		
-		/// <summary>
-		/// 
-		/// </summary>
-		/// <param name="one">
-		/// A <see cref="Tag"/>
-		/// </param>
-		/// <param name="two">
-		/// A <see cref="System.String"/>
-		/// </param>
-		/// <returns>
-		/// A <see cref="System.Boolean"/>
-		/// </returns>
-		public static bool operator !=(Tag one, string two)
-		{
-            if (two == null)
-                return false;
-
-			return one.LocalName != two;
-		}
-		
-		/// <summary>
-		/// 
-		/// </summary>
-		/// <param name="o">
-		/// A <see cref="System.Object"/>
-		/// </param>
-		/// <returns>
-		/// A <see cref="System.Boolean"/>
-		/// </returns>
-		public override bool Equals (object o)
-		{
-			return (this == (Tag)o);
-		}
-		
-		/// <summary>
-		/// 
-		/// </summary>
-		/// <returns>
-		/// A <see cref="System.Int32"/>
-		/// </returns>
-		public override int GetHashCode ()
-		{
-			return base.GetHashCode ();
-		}
-		
+		/// </value>
 		public byte[] Bytes
 			{
 			get { return Convert.FromBase64String(InnerText); }
